<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    tools:context=".ui.fragments.CustomerInformationFragment">

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etCompanyName"
            style="@style/TextInputLayoutStyle"
            android:hint="@string/company_name"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/icon_abc">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/primary_text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etCustomerName"
            style="@style/TextInputLayoutStyle"
            android:hint="@string/customer_name"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/icon_profile">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/primary_text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPhoneNumber"
            style="@style/TextInputLayoutStyle"
            android:hint="@string/phone_number"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/icon_contact">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/primary_text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailAddress"
            style="@style/TextInputLayoutStyle"
            android:hint="@string/e_mail_address"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/icon_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/secondary_text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etNote"
            style="@style/TextInputLayoutStyle"
            android:hint="@string/your_note"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/icon_note">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:maxLines="1"
                android:textColor="@color/primary_text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPhysicalAddress"
            style="@style/TextInputLayoutStyle"
            android:hint="@string/your_address"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/icon_address">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:inputType="textPostalAddress"
                android:textColor="@color/primary_text_color" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>