<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.activities.LoginActivity">

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_layout"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/hello"
            android:textColor="@color/primary_text_color"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/login_to_your_account"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etUsername"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/username_label"
            android:textColorHint="@color/primary_text_color"
            app:boxBackgroundColor="@color/background"
            app:boxStrokeColor="@color/background"
            app:boxStrokeErrorColor="@color/errorColor"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            app:endIconTint="@color/primary_text_color"
            app:errorEnabled="true"
            app:errorIconTint="@color/errorColor"
            app:errorTextColor="@color/errorColor"
            app:helperTextTextColor="@color/primary_text_color"
            app:hintTextColor="@color/primary_text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassword"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password_label"
            android:textColorHint="@color/primary_text_color"
            app:boxBackgroundColor="@color/background"
            app:boxStrokeColor="@color/background"
            app:boxStrokeErrorColor="@color/errorColor"
            app:counterMaxLength="32"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/primary_text_color"
            app:errorEnabled="true"
            app:errorIconTint="@color/errorColor"
            app:errorTextColor="@color/errorColor"
            app:helperTextTextColor="@color/primary_text_color"
            app:hintTextColor="@color/primary_text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/primary_text_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/forgot_my_password"
            android:textAlignment="viewEnd"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogIn"
            style="@style/ButtonStyle"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="#07070C"
            android:text="@string/log_in" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>